@@ -6,7 +6,7 @@ Each plugin lives in its own folder and has its own `README.md` with details.
 | Plugin name | Version | Vendor | Description |
 |-------------|---------|--------|-------------|
 | [netextreme_dom](netextreme_dom/) | 0.1.0 | Extreme Networks | Monitor the *rx_signal_power* and the *tx_signal_power* of optical modules (SFP) | 
-| [netextreme_mem](netextreme_mem/) | 0.1.0 | Extreme Networks | Monitor the *memory usage* of Extreme Networks Switches | 
+| [netextreme_mem](netextreme_mem/) | 0.1.1 | Extreme Networks | Monitor the *memory usage* of Extreme Networks Switches | 
 | [netextreme_psu_in](netextreme_psu_in/) | 0.1.0 | Extreme Networks | Monitor the *electrical power* and the *state* of Power Supply Inputs |
 
 ## Installation
